--- a/native/bandersnatch_ring_vrf/Cargo.toml
+++ b/native/bandersnatch_ring_vrf/Cargo.toml
@@ -20,3 +20,4 @@ ring-proof = { package = "ring", git = "https://github.com/daiagi/ring-proof", b
 
 hex = "0.4.3"
 rustler = "0.34.0"
+rand_chacha = { version = "0.3", default-features = false }
