--- a/native/bandersnatch_ring_vrf/Cargo.toml
+++ b/native/bandersnatch_ring_vrf/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "bandersnatch_ring_vrf"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+authors = [ "Baruch Fishman" ]
 
 [lib]
 name = "bandersnatch_ring_vrf"
