--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_PAT }}
+
+      - name: Setup Git for private deps
+        run: |
+          git config --global url."https://${{ secrets.GH_PAT }}@github.com/"
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
