--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,4 +49,4 @@ jobs:
         run: mix deps.get
 
       - name: Run tests with full_vectors
-        run: mix test --include full_vectors 
+        run: mix test --trace
