--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,4 +56,4 @@ jobs:
           mix compile
 
       - name: Run tests with full_vectors
-        run: mix test --no-compile --timeout 180_000
+        run: mix test --no-compile --timeout 180000
