--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,9 +38,8 @@ jobs:
           elixir-version: '1.17.2'
           otp-version: '27.0.1'
 
-      - name: Restore cached build
-        id: cache-build-restore
-        uses: actions/cache/restore@v4
+      - name: Restore dependencies cache
+        uses: actions/cache@v4
         with:
           path: |
             deps
@@ -50,20 +49,11 @@ jobs:
             ${{ runner.os }}-mix-
 
       - name: Install dependencies
-        if: steps.cache-build-restore.outputs.cache-hit != 'true'
         run: mix deps.get
 
       - name: Compile dependencies and project
-        run: mix compile
+        run: |
+          mix compile
 
-      - name: Save build cache
-        if: always() && steps.cache-build-restore.outputs.cache-hit != 'true'
-        uses: actions/cache/save@v4
-        with:
-          path: |
-            deps
-            _build
-          key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
-
-      - name: Run tests
-        run: mix test --no-compile
+      - name: Run tests with full_vectors
+        run: mix test  --timeout 180000
