include full vectors

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,4 +72,4 @@ jobs:
           key: ${{ runner.os }}-mix-${{ hashFiles('mix.lock') }}-${{ hashFiles('native/**/Cargo.lock') }}
 
       - name: Run tests with full_vectors
-        run: mix test  --timeout 300000
+        run: mix test --include full_vectors  --timeout 300000
