--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,6 +63,10 @@ jobs:
             native
           key: ${{ runner.os }}-mix-${{ hashFiles('mix.lock') }}-${{ hashFiles('native/**/Cargo.lock') }}
 
+      - name: Remove invalid test files
+        run: find deps/x509/test/data/ -name "*.tools.ietf.org.cer" -delete || true
+  
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
