--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,11 +76,8 @@ jobs:
       - name: Clone test vectors if repo is updated
         if: steps.cache-vectors-restore.outputs.cache-hit != 'true'
         run: |
-          cd ..
           git clone -b polkajam-vectors https://github.com/davxy/jam-test-vectors.git jam-test-vectors-cache
-          cd jam-test-vectors-cache
-          git rev-parse HEAD > latest_commit.txt
-          cd ..
+          git -C jam-test-vectors-cache rev-parse HEAD > jam-test-vectors-cache/latest_commit.txt
 
       - name: Save latest commit hash to cache manually
         uses: actions/cache/save@v4
