skip cache attempt when build output has not changed

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Save build cache
         uses: actions/cache/save@v4
-        if: always()
+        if: steps.cache-build-restore.outputs.cache-hit != 'true'
         with:
           path: |
             _build
