--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,16 @@ services:
       ssh: [default]
     environment:
       RELEASE_DAEMON: "false"
-    command: ["/node/jamixir/bin/jamixir", "start", "--port=9900", "--keys=/node/keys/0.json", "--genesis=/node/genesis.json"]
+      MIX_ENV: "tiny"
+      KEYS_FILE: "/node/keys/0.json"
+      GENESIS_FILE: "/node/genesis/genesis.json"
+      PORT: 9900
+    command: ["/node/jamixir/bin/jamixir", "start"]
     restart: unless-stopped
     expose:
-      - "9000"
+      - "9900"
     ports:
-      - "9001:9000"
-    volumes:
-      - ./test/keys:/node/keys
-      - ./genesis/genesis.json:/node/genesis.json
+      - "9901:9900"
     networks:
       jamnet:
         ipv6_address: fd00::10
@@ -25,15 +26,16 @@ services:
       ssh: [default]
     environment:
       RELEASE_DAEMON: "false"
-    command: ["/node/jamixir/bin/jamixir", "start", "--port=9901", "--keys=/node/keys/1.json", "--genesis=/node/genesis.json"]
+      MIX_ENV: "tiny"
+      KEYS_FILE: "/node/keys/1.json"
+      GENESIS_FILE: "/node/genesis/genesis.json"
+      PORT: 9900
+    command: ["/node/jamixir/bin/jamixir", "start"]
     restart: unless-stopped
     expose:
-      - "9000"
+      - "9900"
     ports:
-      - "9002:9000"
-    volumes:
-      - ./test/keys:/node/keys
-      - ./genesis/genesis.json:/node/genesis.json
+      - "9902:9900"
     networks:
       jamnet:
         ipv6_address: fd00::11
@@ -44,15 +46,16 @@ services:
       ssh: [default]
     environment:
       RELEASE_DAEMON: "false"
-    command: ["/node/jamixir/bin/jamixir", "start", "--port=9902", "--keys=/node/keys/2.json", "--genesis=/node/genesis.json"]
+      MIX_ENV: "tiny"
+      KEYS_FILE: "/node/keys/2.json"
+      GENESIS_FILE: "/node/genesis/genesis.json"
+      PORT: 9900
+    command: ["/node/jamixir/bin/jamixir", "start"]
     restart: unless-stopped
     expose:
-      - "9000"
+      - "9900"
     ports:
-      - "9003:9000"
-    volumes:
-      - ./test/keys:/node/keys
-      - ./genesis/genesis.json:/node/genesis.json
+      - "9903:9900"
     networks:
       jamnet:
         ipv6_address: fd00::12
@@ -63,15 +66,16 @@ services:
       ssh: [default]
     environment:
       RELEASE_DAEMON: "false"
-    command: ["/node/jamixir/bin/jamixir", "start", "--port=9903", "--keys=/node/keys/3.json", "--genesis=/node/genesis.json"]
+      MIX_ENV: "tiny"
+      KEYS_FILE: "/node/keys/3.json"
+      GENESIS_FILE: "/node/genesis/genesis.json"
+      PORT: 9900
+    command: ["/node/jamixir/bin/jamixir", "start"]
     restart: unless-stopped
     expose:
-      - "9000"
+      - "9900"
     ports:
-      - "9004:9000"
-    volumes:
-      - ./test/keys:/node/keys
-      - ./genesis/genesis.json:/node/genesis.json
+      - "9904:9900"
     networks:
       jamnet:
         ipv6_address: fd00::13
@@ -82,15 +86,16 @@ services:
       ssh: [default]
     environment:
       RELEASE_DAEMON: "false"
-    command: ["/node/jamixir/bin/jamixir", "start", "--port=9904", "--keys=/node/keys/4.json", "--genesis=/node/genesis.json"]
+      MIX_ENV: "tiny"
+      KEYS_FILE: "/node/keys/4.json"
+      GENESIS_FILE: "/node/genesis/genesis.json"
+      PORT: 9900
+    command: ["/node/jamixir/bin/jamixir", "start"]
     restart: unless-stopped
     expose:
-      - "9000"
+      - "9900"
     ports:
-      - "9005:9000"
-    volumes:
-      - ./test/keys:/node/keys
-      - ./genesis/genesis.json:/node/genesis.json
+      - "9905:9900"
     networks:
       jamnet:
         ipv6_address: fd00::14
@@ -101,15 +106,16 @@ services:
       ssh: [default]
     environment:
       RELEASE_DAEMON: "false"
-    command: ["/node/jamixir/bin/jamixir", "start", "--port=9905", "--keys=/node/keys/5.json", "--genesis=/node/genesis.json"]
+      MIX_ENV: "tiny"
+      KEYS_FILE: "/node/keys/5.json"
+      GENESIS_FILE: "/node/genesis/genesis.json"
+      PORT: 9900
+    command: ["/node/jamixir/bin/jamixir", "start"]
     restart: unless-stopped
     expose:
-      - "9000"
+      - "9900"
     ports:
-      - "9006:9000"
-    volumes:
-      - ./test/keys:/node/keys
-      - ./genesis/genesis.json:/node/genesis.json
+      - "9906:9900"
     networks:
       jamnet:
         ipv6_address: fd00::15
