--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       VECTORS_OWNER: davxy
       VECTORS_REPO: jam-test-vectors
-      VECTORS_BRANCH: traces
+      VECTORS_BRANCH: master
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
