--- a/native/erasure_coding/Cargo.toml
+++ b/native/erasure_coding/Cargo.toml
@@ -12,10 +12,11 @@ crate-type = ["cdylib"]
 [dependencies]
 blake2b_simd = { version = "1", default-features = false }
 bounded-collections = { version = "0.1.9", default-features = false }
-reed-solomon = { package = "reed-solomon-simd", git = "https://github.com/ordian/reed-solomon-simd", branch = "simd-feature", default-features = false }
-scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false,  features = ["derive"] }
+reed-solomon-simd = "3.0.1"
+# scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false,  features = ["derive"] }
 thiserror = { version = "1.0.56", default-features = false }
-
+hex = "0.4.3"
+rand = { version = "0.8.4", features = [ "small_rng"] }
 rustler = "0.34.0"
 lazy_static = "1.0.0"
 
@@ -25,5 +26,3 @@ serde_json = "1.0.128"
 [dev-dependencies]
 criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }
 quickcheck = { version = "1.0.3", default-features = false }
-rand = { version = "0.8.4", features = [ "small_rng"] }
-hex = "0.4.3"
