--- a/native/erasure_coding/Cargo.toml
+++ b/native/erasure_coding/Cargo.toml
@@ -9,6 +9,10 @@ name = "erasure_coding"
 path = "src/lib.rs"
 crate-type = ["cdylib"]
 
+[features]
+default = ["nif"]
+nif = ["rustler"]
+
 [dependencies]
 blake2b_simd = { version = "1", default-features = false }
 bounded-collections = { version = "0.1.9", default-features = false }
@@ -17,7 +21,7 @@ reed-solomon-simd = "3.0.1"
 thiserror = { version = "1.0.56", default-features = false }
 hex = "0.4.3"
 rand = { version = "0.8.4", features = [ "small_rng"] }
-rustler = "0.34.0"
+rustler = { version = "0.34.0", optional = true }
 lazy_static = "1.0.0"
 
 serde = "1.0.210"
